Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2700

Custom context menus do not clear messages from QStatusBar

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.1
    • 4.4.1
    • Widgets: Main Window
    • None
    • b6be1c595fa67ec034f04c8a93e57e593ceb97aa

    Description

      When a custom context menu is shown and that menu contains actions with statusTips, the messages are correctly displayed on the QStatusBar.

      However, upon close (or focus out) of the context menu, the messages remain in the QStausBar.

      The messages should be automatically removed when the context menu closes. The correct behavior is exhibited by menus in a QMenuBar.

      This behavior can be seen in the example:
      examples\mainwindows\menus

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            gpf Shane McLaughlin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes