Make sure the context menus also clear the status tip when needed

Task-number: QTBUG-2700
Reviewed-by: ogoffart